vnka/err
[1m../vk_utils/vk_utils.c:190:14: [0m[0;1;35mwarning: [0m[1munused variable 'res' [-Wunused-variable][0m
    VkResult res;
[0;1;32m             ^
[0mIn file included from ../vk_utils/vk_utils.c:25:
[1m../vk_utils/vk_utils.h:96:17: [0m[0;1;35mwarning: [0m[1munused function 'vk_setup' [-Wunused-function][0m
static vk_error vk_setup(struct vk_physical_device *phy_dev, struct vk_device *dev, VkQueueFlags qflags, uint32_t create_count)
[0;1;32m                ^
[0m2 warnings generated.
In file included from ../vk_utils/vk_render_helper.c:25:
In file included from ../vk_utils/vk_render_helper.h:28:
[1m../vk_utils/vk_utils.h:96:17: [0m[0;1;35mwarning: [0m[1munused function 'vk_setup' [-Wunused-function][0m
static vk_error vk_setup(struct vk_physical_device *phy_dev, struct vk_device *dev, VkQueueFlags qflags, uint32_t create_count)
[0;1;32m                ^
[0m1 warning generated.
[1mmain.c:116:26: [0m[0;1;31merror: [0m[1mpassing 'struct vk_pipeline' to parameter of incompatible type 'struct vk_pipeline *'; take the address with &[0m
                vk_free_pipelines(dev, render_data.main_pipeline, 1);
[0;1;32m                                       ^~~~~~~~~~~~~~~~~~~~~~~~~
[0m[0;32m                                       &
[0m[1m./../vk_utils/vk_utils.h:140:67: [0m[0;1;30mnote: [0mpassing argument to parameter 'pipelines' here[0m
void vk_free_pipelines(struct vk_device *dev, struct vk_pipeline *pipelines, uint32_t pipeline_count);
[0;1;32m                                                                  ^
[0m[1mmain.c:117:70: [0m[0;1;31merror: [0m[1mmember reference type 'struct vk_render_essentials' is not a pointer; did you mean to use '.'?[0m
                vk_free_graphics_buffers(dev, render_data.main_gbuffers, essentials->image_count, render_data.main_render_pass);
[0;1;32m                                                                         ~~~~~~~~~~^~
[0m[0;32m                                                                                   .
[0m[1mmain.c:122:32: [0m[0;1;31merror: [0m[1mpassing 'struct vk_render_essentials' to parameter of incompatible type 'struct vk_render_essentials *'; take the address with &[0m
                vk_render_cleanup_essentials(essentials, dev);
[0;1;32m                                             ^~~~~~~~~~
[0m[0;32m                                             &
[0m[1m./../vk_utils/vk_render_helper.h:32:64: [0m[0;1;30mnote: [0mpassing argument to parameter 'essentials' here[0m
void vk_render_cleanup_essentials(struct vk_render_essentials *essentials, struct vk_device *dev);
[0;1;32m                                                               ^
[0m[1mmain.c:124:19: [0m[0;1;31merror: [0m[1mmember reference type 'struct render_data' is not a pointer; did you mean to use '.'?[0m
                free(render_data->main_gbuffers);
[0;1;32m                     ~~~~~~~~~~~^~
[0m[0;32m                                .
[0m[1mmain.c:126:3: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'res'[0m
                res = vk_get_swapchain(vk, phy_dev, dev, swapchain, os_window, 1, &os_window->present_mode);
[0;1;32m                ^
[0m[1mmain.c:128:26: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'res'[0m
                if (vk_error_is_error(&res)) {
[0;1;32m                                       ^
[0m[1mmain.c:129:21: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'res'[0m
                        vk_error_printf(&res, "Could not create surface and swapchain\n");
[0;1;32m                                         ^
[0m[1mmain.c:130:4: [0m[0;1;35mwarning: [0m[1mimplicit declaration of function 'exit_cleanup' is invalid in C99 [-Wimplicit-function-declaration][0m
                        exit_cleanup(vk, dev, swapchain, os_window);
[0;1;32m                        ^
[0m[1mmain.c:131:4: [0m[0;1;31merror: [0m[1mvoid function 'novel_function' should not return a value [-Wreturn-type][0m
                        return false;
[0;1;32m                        ^      ~~~~~
[0m[1mmain.c:134:3: [0m[0;1;35mwarning: [0m[1mimplicit declaration of function 'render_loop_init' is invalid in C99 [-Wimplicit-function-declaration][0m
                render_loop_init(phy_dev, dev, swapchain, os_window);
[0;1;32m                ^
[0mIn file included from main.c:148:
[1m./../os_utils/xcb_x11_utils.h:12:20: [0m[0;1;35mwarning: [0m[1mformat string is not a string literal (potentially insecure) [-Wformat-security][0m
            printf(*mod);
[0;1;32m                   ^~~~
[0m[1m./../os_utils/xcb_x11_utils.h:12:20: [0m[0;1;30mnote: [0mtreat the string as an argument to avoid this[0m
            printf(*mod);
[0;1;32m                   ^
[0m[0;32m                   "%s", 
[0m[1mmain.c:435:13: [0m[0;1;31merror: [0m[1mstatic declaration of 'render_loop_init' follows non-static declaration[0m
static void render_loop_init(struct vk_physical_device *phy_dev, struct vk_device *dev, struct vk_swapchain *swapchain, struct app_os_window *os_window)
[0;1;32m            ^
[0m[1mmain.c:134:3: [0m[0;1;30mnote: [0mprevious implicit declaration is here[0m
                render_loop_init(phy_dev, dev, swapchain, os_window);
[0;1;32m                ^
[0m[1mmain.c:470:13: [0m[0;1;31merror: [0m[1mstatic declaration of 'exit_cleanup' follows non-static declaration[0m
static void exit_cleanup(VkInstance vk, struct vk_device *dev, struct vk_swapchain *swapchain, struct app_os_window *os_window)
[0;1;32m            ^
[0m[1mmain.c:130:4: [0m[0;1;30mnote: [0mprevious implicit declaration is here[0m
                        exit_cleanup(vk, dev, swapchain, os_window);
[0;1;32m                        ^
[0m[1mmain.c:531:8: [0m[0;1;35mwarning: [0m[1munused variable 'pause_time' [-Wunused-variable][0m
        float pause_time=pres_pause(app_data->pause);
[0;1;32m              ^
[0m[1mmain.c:519:8: [0m[0;1;35mwarning: [0m[1munused variable 'rdelta' [-Wunused-variable][0m
        float rdelta=0;
[0;1;32m              ^
[0m5 warnings and 10 errors generated.
